[project]
name = "peakwhale-helm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.9.3",
    "duckdb>=1.4.3",
    "faiss-cpu>=1.13.1",
    "faker>=39.0.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.5",
    "langgraph>=1.0.5",
    "mcp>=1.24.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "reportlab>=4.4.6",
    "sentence-transformers>=5.2.0",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "yfinance>=0.2.66",
    "requests>=2.32.0",
]
